# ListeningAI

./: .gitignore  LICENSE  README.md  api_server.py  config.py.example  index.html  pyproject.toml  requirements.txt  simulate.py
listening_ai/: __init__.py  auth.py  blueprint.py  brevity.py  controller.py  llm.py  proactive.py  settings.py  tools.py  util.py
listening_ai/store/: __init__.py  base.py  json_file.py  spaces.py
tests/: test_api.py  test_brevity.py  test_controller.py  test_llm.py  test_proactive.py  test_settings.py  test_store.py  test_tools.py  test_util.py
