[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listening-ai"
version = "0.1.1"
description = "Reusable conversational controller that listens better than it speaks"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mickey Shaughnessy" }]
keywords = ["llm", "flask", "chatbot", "tools", "agentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "requests>=2.31",
    "werkzeug>=3.0",
]

[project.optional-dependencies]
spaces = ["boto3>=1.34"]
dev = ["pytest>=7.0", "boto3>=1.34"]

[project.urls]
Homepage = "https://github.com/mickeyshaughnessy/ListeningAI"
Repository = "https://github.com/mickeyshaughnessy/ListeningAI"
Issues = "https://github.com/mickeyshaughnessy/ListeningAI/issues"

[tool.setuptools.packages.find]
include = ["listening_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
